--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                 <p style="margin-top: 15px; text-align: center; color: #aaa;">
                     با ورود، قوانین فروشگاه را پذیرفته‌اید
                 </p>
+                <!-- این تکه کد رو در مودال ورود (login-modal) پیدا کن: -->
                 <p style="margin-top: 10px; text-align: center;">
                     <a href="#" id="show-register">ثبت‌نام کامل (با نام و رمز)</a>
                 </p>
