--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                     <input type="tel" id="phone" placeholder="09xxxxxxxxx" maxlength="11" pattern="09[0-9]{9}" inputmode="numeric">
                 </div>
                 <div class="form-group">
-                    <label for="password">رمز عبور (اختیاری)</label>
+                    <label for="password">رمز عبور</label>
                     <input type="password" id="password" placeholder="در صورت ثبت‌نام قبلی">
                 </div>
                 <button class="btn btn-primary btn-login" id="submit-login">ورود / عضویت</button>
