--- a/index.html
+++ b/index.html
@@ -949,6 +949,10 @@
                 }
                 </script>
 
+                        </div>
+                    </div>
+                </div>
+
                 <!-- مودال تأیید تلگرام (باید اینجا باشد) -->
                 <div class="modal-overlay" id="telegram-code-overlay"></div>
                 <div class="modal" id="telegram-code-modal">
@@ -993,7 +997,6 @@
                         </div>
                     </div>
                 </div>
-
 
 <!-- اسکریپت‌ها -->
 <script src="telegram-2fa.js"></script>
